--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,13 @@ html, body, #root {
   justify-content: space-between;
   align-items: center;
   max-width: 600px;
-  margin: 0 auto;
+    margin-top: 10px; /* ← h1 の padding-top に近い値 */
+
   padding: 20px 20px 0;
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
