--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
+/* 例: index.css の先頭に追加 */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Meiryo", "メイリオ", sans-serif;
 }
 
 code {
